--- a/shared/latex/reinforcement-learning/deep.tex
+++ b/shared/latex/reinforcement-learning/deep.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{DQN}
+\begin{frame}{Deep Q Network}
   \begin{itemize}
   \item 49 jeux Atari
   \item 210x160 pixels
@@ -8,8 +7,7 @@
   \imgtw[0.6]{atari}
 \end{frame}
 
-\begin{frame}
-  \frametitle{DQN}
+\begin{frame}{DQN --- Détails techniques}
   \begin{itemize}
   \item input 84x84x4
   \item Récompense [-1,0,+1] suivant les variations de score
@@ -22,8 +20,16 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Appliqué au Jeu de Pong}
+\begin{frame}{DQN --- Application au jeu Pong}
   \bluelink{https://www.youtube.com/watch?v=lcVg9hVya-c}{Démo DQN PONG}
 \end{frame}
 
+\begin{frame}{Successeurs de DQN}
+  \begin{description}[<+->]
+    \item[R2D2] Utilise des réseaux récurrents
+    \item[Never Give Up] Utilise des réseaux à mémoire et des mécanismes d'exploration
+    \item[Agent57] Partage intelligent des mécanismes d'exploration entre les jeux
+  \end{description}
+
+  \onslide<+->{Agent57 bat les humains sur les 57 jeux}
+\end{frame}
