--- a/shared/latex/reinforcement-learning/intro.tex
+++ b/shared/latex/reinforcement-learning/intro.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Définition}
+\begin{frame}{Définition}
   \imgtw[0.5]{rl}
   où :
   \newline
@@ -10,34 +9,24 @@
   $R_t$ la récompense de l'environnement à l'agent (conséquence de $A_t$)
 \end{frame}
 
-\begin{frame}
-  \frametitle{Des contraintes techniques}
-  \begin{itemize}
-  \item L'environnement n'est pas forcément parfaitement modélisable
-  \item La récompense n'est pas forcément calculable immédiatement
+\begin{frame}{Contraintes techniques \& théoriques}
+  \begin{itemize}[<+->]
+    \item L'environnement n'est pas forcément parfaitement modélisable
+    \item La récompense n'est pas forcément calculable immédiatement
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Des contraintes techniques}
+\begin{frame}{Contraintes techniques \& théoriques --- Bourse}
     \red{Environnement modélisable ? Récompense calculable ?}
   \imgth[0.6]{bourse-ny}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Des contraintes techniques}
-  \begin{center}
-    \red{Environnement modélisable ? Récompense calculable ?}
-  \end{center}
-  \imgth[0.6]{echec}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Des contraintes techniques}
+\begin{frame}{Contraintes techniques \& théoriques --- Échecs}
   \begin{center}
     \red{Environnement modélisable ? Récompense calculable ?}
   \end{center}
   \imgth[0.5]{echec}
+  \pause
   \begin{center}
     $\approx 10^{120}$ parties possibles $\ggg 6 x 10^{85}$
     \newline
@@ -45,17 +34,14 @@
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Des contraintes techniques}
+\begin{frame}{Contraintes techniques \& théoriques --- Go}
   \imgth[0.6]{go}
   \begin{center}
     \huge{$\approx 10^{600}$}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Des contraintes techniques}
-  \underline{Des contraintes techniques} :
+\begin{frame}{Plannification}
   \begin{itemize}
   \item L'environnement n'est pas forcément parfaitement modélisable
   \item La récompense n'est pas forcément calculable immédiatement
@@ -63,8 +49,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Des contraintes techniques}
+\begin{frame}{Plannification --- Voyageur de commerce}
   \imgth[0.6]{voyageur-commerce}
 \end{frame}
 
