--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -1,24 +1,23 @@
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  Grande-Bretagne : Predpol (abandonné),  National Data Analytics Solution (NDAS) en mars 2019
+\begin{frame}{Prédiction pour la prévention}
+  Grande-Bretagne~: Predpol (abandonné), National Data Analytics Solution (NDAS) en mars 2019.
+
   \imgtw[0.8]{minorit-report}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  Détection de mensonge à la frontière (iBorderCtrl)
-  \newline
-  Projet pilote en Hongrie, Lettonie et Grèce
+\begin{frame}{Détection de mensonges à la frontière}
+  Projet pilote en Hongrie, Lettonie et Grèce (iBorderCtrl).
+
   \imgtw[0.8]{airport-lie-detection}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
+\begin{frame}{Caméras de vidéo-surveillance}
   Le fil céleste :
+
   \begin{itemize}
   \item 400 Millions de caméras début 2020 
   \item 600 Millions d'ici la fin 2020
   \end{itemize}
+
   \begin{minipage}[c]{0.49\linewidth}
     \imgtw[1]{chine-orwell}
   \end{minipage}\hfill
@@ -27,44 +26,34 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
+\begin{frame}{Reconnaissance faciale}
   \imgtw[1]{chine-reco-face-fail}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  Automatisation du processus de recrutement
+\begin{frame}{Automatisation du processus de recrutement}
   \imgtw[0.8]{amazon-ai-favor-men}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  Préférence sexuelles à partir d'une photo ?
+\begin{frame}{Préférence sexuelles à partir d'une photo ?}
   \imgtw[0.8]{gay-or-not}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  Évaluer une Baby-sitter en fonction de son activité en ligne?
+\begin{frame}{Évaluer une Baby-sitter en fonction de son activité en ligne?}
   \imgtw[0.8]{baby-sitter-reliable}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  La chine traque ses musulmans du Xinjiang :\\
+\begin{frame}{Traque de la Chine de ses musulmans du Xinjiang}
   Classement automatique en 36 catégories à partir de toutes les données possibles.
+
   \imgtw[0.8]{chine-musulmans-traque}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  OpenAI : GPT-2 est 'trop' performant pour la génération de texte
+\begin{frame}{Génération de texte au niveau humain}
+  OpenAI~: GPT-3 est «~trop~» performant pour la génération de texte.
   \imgtw[0.8]{openai-gpt2-example}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Les Problémes Ethiques}
-  Deepfake : 'Zao'
+\begin{frame}{Les problèmes éthiques}
+  Deepfake : «~Zao~»
   \imgtw[0.8]{zao-deepfake}
 \end{frame}
