--- a/shared/latex/big-questions/legal.tex
+++ b/shared/latex/big-questions/legal.tex
@@ -1,30 +1,24 @@
-\begin{frame}
-  \frametitle{Questionnements Juridiques}
+\begin{frame}{CNIL}
   \imgtw[0.8]{cnil-logo}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Questionnements Juridiques}
-  Ethique et Intelligence artificielle (Comité 2017)
-  Recommandations :
-  \begin{itemize}
-  \item Former à l’éthique tous les acteurs-maillons de la « chaîne algorithmique » 
-  \item Rendre les systèmes algorithmiques compréhensibles
-  \item Designer les systèmes algorithmiques au service de la liberté humaine
-  \item Constituer une plateforme nationale d’audit des algorithmes
-  \item Encourager la recherche sur l’IA éthique
-  \item Renforcer la fonction éthique au sein des entreprises
+\begin{frame}{Comité éthique \& intelligence artificielle}
+  Étude \& rapport par la CNIL début 2017. Recommandations~:
+  \begin{itemize}[<+->]
+    \item Former à l’éthique tous les acteurs-maillons de la « chaîne algorithmique » 
+    \item Rendre les systèmes algorithmiques compréhensibles
+    \item Designer les systèmes algorithmiques au service de la liberté humaine
+    \item Constituer une plateforme nationale d’audit des algorithmes
+    \item Encourager la recherche sur l’IA éthique
+    \item Renforcer la fonction éthique au sein des entreprises
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Questionnements Juridiques}
-  2018
+\begin{frame}{RGPD}
+  Introduit en 2018 par le parlement européen.
   \imgtw[0.8]{rgpd}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Questionnements Juridiques}
-  Loi bioéthique :
-  Le ``traitement algorithmique de données massives'' pour des ``actes à visée préventive, diagnostique ou thérapeutique'', le professionnel de santé sera tenu d'informer le patient ``de cette utilisation et des modalités d’action de ce traitement``.
+\begin{frame}{Loi bioéthique}
+  À propos du «~traitement algorithmique de données massives~» pour des «~actes à visée préventive, diagnostique ou thérapeutique~»~: le professionnel de santé sera tenu d'informer le patient «~de cette utilisation et des modalités d’action de ce traitement~».
 \end{frame}
