--- a/shared/latex/neural-networks/optimize.tex
+++ b/shared/latex/neural-networks/optimize.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Qu'est-ce qu'un hyperparamètre~?}
+\begin{frame}{Qu'est-ce qu'un hyper-paramètre~?}
   \begin{minipage}[l]{0.49\linewidth}
     \imgtw[0.9]{deep-net}
   \end{minipage}\hfill
