Finish pass over day 2 of DPL
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/neural-networks/cnn-data.tex
+++ b/shared/latex/neural-networks/cnn-data.tex
@@ -1,47 +1,39 @@
-\begin{frame}
-  \frametitle{~}
-  MNIST (810k caractères manuscrits)
+\begin{frame}{MNIST}
+  810k caractères manuscrits
   \imgth[0.6]{mnist}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  Caltech 256 (300k objets/animaux/personnes)
+\begin{frame}{Caltech 256}
+  300k objets/animaux/personnes
   \imgth[0.7]{caltech256}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  The Street View House Numbers (600k chiffres annotés)
+\begin{frame}{Street View House Numbers}
+  600k numéros annotés
   \imgth[0.7]{streetviewdataset}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  ImageNet (~12M images annotés par synset de wordnet)
+\begin{frame}{ImageNet}
+  ~12M images annotés par synset de wordnet
   \imgth[0.7]{imagenet}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  MS-COCO (330k images avec annotation+segmentation)
+\begin{frame}{MS-COCO}
+   330k images avec annotation+segmentation
   \imgtw{ms-coco}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  VisualQA (265k images, Question answering)
+\begin{frame}{VisualQA}
+  265k images, Question answering
   \imgth[0.7]{visual-qa}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  Open Images (9M images annotées avec 6000 catégories)
+\begin{frame}{Open Images}
+  9M images annotées avec 6000 catégories
   \imgth[0.7]{openimage}
 \end{frame}
 
-\begin{frame}
-  \frametitle{~}
-  MS-Celeb-1M (10M photos de 100k célebrités)
+\begin{frame}{MS-Celeb-1M}
+  10M photos de 100k célebrités
   \imgth[0.7]{ms-celeb}
 \end{frame}
