--- a/shared/latex/neural-networks/tp-cnn.tex
+++ b/shared/latex/neural-networks/tp-cnn.tex
@@ -1,13 +1,8 @@
-\begin{frame}
-  \frametitle{Données Landscape : instructions}
+\begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{Keras-CNN-landscape}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Données émotions : instructions}
-  \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4}{Keras-CNN-emotions}
+    \begin{itemize}
+      \item \bluelink{https://colab.research.google.com/drive/1xLFNAWBJxmp0GBcRhmwKfZUbewBDq4hz}{CNN avec Keras sur les données Landscape}
+      \item \bluelink{https://colab.research.google.com/drive/1AarpBtVUUi2DpOd20kF3LHg-bKLM7h_4}{CNN avec Keras sur les données Emotions}
+    \end{itemize}
   \end{center}
 \end{frame}
