--- a/shared/latex/neural-networks/gan-intro.tex
+++ b/shared/latex/neural-networks/gan-intro.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{Que voyez-vous ?}
+\begin{frame}{Que voyez-vous ?}
   \begin{minipage}[l]{0.49\linewidth}
     \imgtw[1.0]{gan-horse-zebra}
   \end{minipage}\hfill
@@ -8,8 +7,7 @@
   \end{minipage}\hfill
 \end{frame}
 
-\begin{frame}
-  \frametitle{Que voyez-vous ?}
+\begin{frame}{Que voyez-vous ?}
   \imgth[0.8]{gan-faux-visages}
 \end{frame}
 
