--- a/shared/latex/neural-networks/gan-model.tex
+++ b/shared/latex/neural-networks/gan-model.tex
@@ -1,16 +1,12 @@
-\begin{frame}
-  \frametitle{Faux Visages}
+\begin{frame}{Génération de visages}
   \imgth[0.8]{gan-faux-visages}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Faux Zèbre - Faux Cheval}
+\begin{frame}{Génération Zèbre $\iff$ Cheval}
   \imgth[0.8]{cyclegan}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Schéma}
+\begin{frame}{Schéma des Generative Adverserial Networks}
   Le générateur n'a jamais vu les vraies données !
   \imgtw[0.8]{gan-schema}
 \end{frame}
-
