--- a/shared/latex/tf-keras-intro/keras-intro.tex
+++ b/shared/latex/tf-keras-intro/keras-intro.tex
@@ -1,123 +1,99 @@
-\begin{frame}
-  \frametitle{Introduction à Keras}
-  Keras est une API de haut niveau qui permet de prototyper des réseaux de neurones de toute sorte.
+\begin{frame}{Introduction}
+  Keras est une API de haut niveau qui permet de prototyper des réseaux de neurones de toutes sortes.
+
   \imgtw[0.5]{keras-tensorflow-logo}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Introduction à Keras}
-  User-friendly :
-  \begin{itemize}
-  \item Interface simple
-  \item Accès facilité aux métriques d'évaluation
+\begin{frame}{Avantages --- Facile d'utilisation}
+  \begin{itemize}[<+->]
+    \item Interface simple
+    \item Accès facilité aux métriques d'évaluation
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Introduction à Keras}
-  Modulaire :
-  \begin{itemize}
-  \item Les réseaux se 'branchent' facilement les uns avec les autres
-  \item Tous les réseaux se configurent facilement
+\begin{frame}{Avantages --- Modulaire}
+  \begin{itemize}[<+->]
+    \item Les réseaux se «~branchent~» facilement les uns avec les autres
+    \item Tous les réseaux se configurent facilement
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Introduction à Keras}
-  Etat de l'art :
-  \begin{itemize}
-  \item Les modèles et optimiseurs pertinents sont rapidement ajouté à Keras
-  \item Reproduction facile de résultats récents
+\begin{frame}{Avantages --- État de l'art}
+  \begin{itemize}[<+->]
+    \item Les modèles et optimiseurs pertinents sont rapidement ajouté à Keras
+    \item Reproduction facile de résultats récents
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Introduction à Keras}
-  Facile de dévellopper de nouvelles :
-  \begin{itemize}
-  \item Couche de réseau (Layers)
-  \item Fonction de perte (Loss)
-  \item Métriques d'évaluation
+\begin{frame}{Avantages --- Extensible}
+  Facile de développer de nouvelles :
+  \begin{itemize}[<+->]
+    \item Couches de réseau (Layers)
+    \item Fonctions de perte (Loss)
+    \item Métriques d'évaluation
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Réseau de neurones en Keras}
+\begin{frame}{Réseau de neurones en Keras}
   \mintedpycode{tf-keras/mlp}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Options de configuration des Layers}
+\begin{frame}{Options de configuration des Layers}
   \mintedpycode{tf-keras/configurelayer}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Optimiseur, Loss et Métrique d'évaluation}
+\begin{frame}{Optimiseur, fonction de perte et métrique d'évaluation}
   \mintedpycode{tf-keras/compile}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Affichage du modèle}
+\begin{frame}{Affichage du modèle}
   \mintedpy{tf-keras/print-model}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage}
+\begin{frame}{Apprentissage}
   \mintedpycode{tf-keras/learn-1}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage}
+\begin{frame}{Apprentissage avec validation}
   \mintedpycode{tf-keras/learn-2}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage}
+\begin{frame}{Apprentissage avec validation par split}
   \mintedpycode{tf-keras/learn-3}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Apprentissage}
+\begin{frame}{Utilisation de \texttt{td.data.Dataset}}
   \mintedpycode{tf-keras/learn-4}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Evaluation}
+\begin{frame}{Évaluation}
   \mintedpy{tf-keras/evaluate}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Evaluation}
+\begin{frame}{Prédiction}
   \mintedpy{tf-keras/predict}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Sauvegarde de la configuration d'un modèle}
+\begin{frame}{Sauvegarde de la configuration d'un modèle}
   \mintedpycode{tf-keras/save-config}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Sauvegarde des poids d'un modèle}
+\begin{frame}{Sauvegarde des poids d'un modèle}
   \mintedpycode{tf-keras/save-weights}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Sauvegarde d'un modèle complet}
+\begin{frame}{Sauvegarde d'un modèle complet}
   \mintedpycode{tf-keras/save-all}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Callbacks}
+\begin{frame}{Callbacks}
   \mintedpycode{tf-keras/callbacks}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Création d'un Layer}
+\begin{frame}{Création d'un Layer}
   \mintedpycode{tf-keras/custom-layer}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Utilisation de notre nouveau Layer}
+\begin{frame}{Utilisation de notre nouveau Layer}
   \mintedpycode{tf-keras/custom-layer-use}
 \end{frame}
-
