--- a/shared/latex/neural-networks/rnn-keras.tex
+++ b/shared/latex/neural-networks/rnn-keras.tex
@@ -1,20 +1,15 @@
-\begin{frame}
-  \frametitle{RNN avec Keras}
+\begin{frame}{RNN simple}
   \mintedpy{tf-keras/rnn}
 \end{frame}
 
-\begin{frame}
-  \frametitle{LSTM avec Keras}
+\begin{frame}{LSTM}
   \mintedpy{tf-keras/lstm}
 \end{frame}
 
-\begin{frame}
-  \frametitle{GRU avec Keras}
+\begin{frame}{GRU}
   \mintedpy{tf-keras/gru}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Deep Encoder avec Keras}
+\begin{frame}{RNN profond}
   \mintedpy{tf-keras/rnn-all-timestep}
 \end{frame}
-
