--- a/shared/latex/neural-networks/tp-rnn-text.tex
+++ b/shared/latex/neural-networks/tp-rnn-text.tex
@@ -1,5 +1,4 @@
-\begin{frame}
-  \frametitle{~}
+\begin{frame}{Instructions}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1tTcEZ55g7dYbDkX2IWmJpvjBcKLbvBV9}{RNN - Classification de texte}
   \end{center}
