--- a/shared/latex/sequential-data/sequential-models.tex
+++ b/shared/latex/sequential-data/sequential-models.tex
@@ -1,10 +1,12 @@
 \begin{frame}{Tâches variées}
-  \begin{itemize}
-  \item Prédiction d'une classe
-  \item Prédiction de la suite d'une séquence (one step)
-  \item Prédiction de la suite d'une séquence (multi step)
-  \item Génération de séquence
-  \item Découverte de patterns
+  \begin{itemize}[<+->]
+    \item Prédiction d'une classe
+    \item Prédiction de la suite d'une séquence (one step)
+    \item Prédiction de la suite d'une séquence (multi step)
+    \item Génération de séquence
+    \item Découverte de patterns
+    \item Clustering
+    \item Détection d'anomalies
   \end{itemize}
 \end{frame}
 
@@ -17,7 +19,6 @@
     \item Son (chant d'oiseau, personne, genre musical, ...)
     \item Vidéos (film, documentaire, stand up , ...)
   \end{itemize}
-  \onslide<+->{Certain modèles permettent de clusteriser (non-supervisée)}
 \end{frame}
 
 \begin{frame}{Tâches~: prédiction de la suite d'une séquence (one step)}
