--- a/shared/latex/neural-networks/attention-model.tex
+++ b/shared/latex/neural-networks/attention-model.tex
@@ -1,13 +1,7 @@
-\subsection{Modèle à attention et Modèle à Mémoire}
-
-
-
-\begin{frame}
-  \frametitle{Modèle à attention}
+\begin{frame}{Modèle à attention}
   Modèle à attention pour la traduction
   \imgth[0.8]{attention-model}
   \begin{center}
     \bluelink{https://demo.allennlp.org/reading-comprehension}{Démo modèle à attention}
   \end{center}
 \end{frame}
-
