--- a/shared/latex/neural-networks/rnn.tex
+++ b/shared/latex/neural-networks/rnn.tex
@@ -1,13 +1,11 @@
-\begin{frame}
-  \frametitle{Réseaux de Neurones Récurrents}
+\begin{frame}{Différence avec un réseau feedforward}
   \imgtw[0.7]{nn-rnn-comparaison}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Réseaux de Neurones Récurrents}
+\begin{frame}{Modèle}
   \imgtw[0.7]{rnn-unfold}
-  $h_{t}=\sigma_{h}(U*x_{t}+V*h_{t-1}+b_{h})$ \\
-  $o_{t}=\sigma_{o}(W*h_{t}+b_{o})$ \\
+  $h_{t}=\sigma_{h}(Ux_{t}+Vh_{t-1}+b_{h})$ \\
+  $o_{t}=\sigma_{o}(Wh_{t}+b_{o})$ \\
   \begin{itemize}
   \item $x_{t}$ : vecteur d'entrée
   \item $h_t$ : vecteur de la couche cachée
@@ -17,27 +15,22 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Réseaux de Neurones Récurrents}
-  Prédiction de la suite d'une séquence (ex: modèle de langage)
+\begin{frame}{Prédiction de la suite d'une séquence}
+  Exemmple~: modèle de langage
+
   \imgtw[0.7]{rnn-language-model}
+
   Peut être utilisé pour générer de nouvelles séquences
 \end{frame}
 
-\begin{frame}
-  \frametitle{Réseaux de Neurones Récurrents}
-  Prédiction d'une classe
+\begin{frame}{Prédiction d'une classe}
   \imgth[0.7]{rnn-predict-class-2}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Réseaux de Neurones Récurrents}
-  Génération d'une séquence (seq2seq)
-  \imgtw[0.7]{rnn-seq2seq}
+\begin{frame}{Génération d'une séquence (seq2seq)}
+  \imgtw{rnn-seq2seq}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Réseaux de Neurones Récurrents}
-  Le problème du gradient qui disparaît (vanishing gradient)
+\begin{frame}{Problème du gradient qui disparaît (vanishing gradient)}
   \imgtw{vanishing-gradient-rnn}
 \end{frame}
