--- a/shared/latex/neural-networks/tp-rnn.tex
+++ b/shared/latex/neural-networks/tp-rnn.tex
@@ -1,12 +1,10 @@
-\begin{frame}
-  \frametitle{Travaux Pratiques}
+\begin{frame}{Instructions}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1fL6j4ylF6Mbs7o9d0nLO8Y4LxA11uoBD}{Keras - RNN - Voltaire Generator}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Travaux Pratiques}
+\begin{frame}{Instructions}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1v27jFJB-auN45fiYcRDeEw8ZO2FawE13}{Keras - seq2seq - Calculator}
   \end{center}
