--- a/shared/latex/sequential-data/sequential-data.tex
+++ b/shared/latex/sequential-data/sequential-data.tex
@@ -25,33 +25,36 @@
   $x_3 = (...)$ 
 \end{frame}
 
-\begin{frame}{Types de données séquentielles~: texte}
-  1: lorem ipsum dolor sit amet, consectetur adipiscing elit, ... \\
-  2: Great minds discuss ideas; average minds discuss events; small minds discuss people. \\
-  3: Hier, mon voisin a mangé une pomme et sa femme une poire. \\
-  4: ...
+\begin{frame}{Types de données séquentielles --- texte}
+  \begin{enumerate}
+    \item \texttt{lorem ipsum dolor sit amet, consectetur adipiscing elit, ...}
+    \item \texttt{Great minds discuss ideas; average minds discuss events; small minds discuss people.}
+    \item \texttt{Hier, mon voisin a mangé une pomme et sa femme une poire.}
+    \item \texttt{…}
+  \end{enumerate}
 \end{frame}
 
-\begin{frame}{Types de données séquentielles~: A.D.N.}
-  1: ATGCGATCTATCGCTAGCCGCGCTATACGCA \\
-  2: GATTATAGCTAGCTCGCGCTATATCGCTAGCTAGCTAGCTAGC \\
-  3: ...
+\begin{frame}{Types de données séquentielles --- ADN}
+  \begin{enumerate}
+    \item \texttt{ATGCGATCTATCGCTAGCCGCGCTATACGCA}
+    \item \texttt{GATTATAGCTAGCTCGCGCTATATCGCTAGCTAGCTAGCTAGC}
+  \end{enumerate}
 \end{frame}
 
-\begin{frame}{Types de données séquentielles~: son}
+\begin{frame}{Types de données séquentielles --- son}
   \imgth[0.7]{fourier}  
 \end{frame}
 
-\begin{frame}{Types de données séquentielles~: vidéo}
+\begin{frame}{Types de données séquentielles --- vidéo}
   \imgtw[0.7]{video-frames}
 \end{frame}
 
-\begin{frame}{Types de données séquentielles~: et bien d'autres}
-  \begin{itemize}
-  \item Economie (actions, obligations, monnaies, …)
-  \item Météo (time, Lat., Long., T°, P, $X_{vent}$, $Y_{vent}$, $Q_{pluie}$)
-  \item Santé (time, T°, Pouls, ...)
-  \item Comportements Clients (time, action-event, ...)
-  \item ...
-  \end{itemize}
+\begin{frame}{Types de données séquentielles --- et bien d'autres}
+  \begin{description}[<+->]
+  \item[Economie] actions, obligations, monnaies
+  \item[Météo] date, latitude, longitude, température, pression, vent, pluie
+  \item[Santé] date, température, pouls
+  \item[Comportements Clients] date, achat, fréquence de visite
+  \item …
+  \end{description}
 \end{frame}
