Add latest IAO improvements
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/reinforcement-learning/deep.tex
+++ b/shared/latex/reinforcement-learning/deep.tex
@@ -32,4 +32,6 @@
   \end{description}
 
   \onslide<+->{Agent57 bat les humains sur les 57 jeux}
+
+  \onslide<+->{\bluelink{https://youtu.be/M9Yn1kYZb6E}{Y compris sur des jeux d'exploration}}
 \end{frame}
