--- a/shared/latex/tools/big-data.tex
+++ b/shared/latex/tools/big-data.tex
@@ -15,7 +15,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Solutions cloud > Intérêts}
+\begin{frame}{Solutions cloud --- Intérêts}
   \begin{itemize}[<+->]
     \item Tous les services sont intégrés
     \item Puissance de calcul ajustable
@@ -23,7 +23,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Solutions cloud > Problèmes}
+\begin{frame}{Solutions cloud --- Problèmes}
   \begin{itemize}[<+->]
     \item Coût important
     \item Vendor lock-in
