Fix a few things for IAO
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/neural-networks/demo-cnn.tex
+++ b/shared/latex/neural-networks/demo-cnn.tex
@@ -1,4 +1,9 @@
 \begin{frame}{Démonstration}
   \centering
-  \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Réseau de convolutions}
+  \begin{itemize}[<+->]
+    \item \bluelink{https://www.cs.ryerson.ca/~aharley/vis/conv/}{Réseau de convolutions}
+    \item \bluelink{https://reiinakano.com/arbitrary-image-stylization-tfjs/}{Styling}
+    \item \bluelink{https://github.com/jiny2001/dcscn-super-resolution}{Super-résolution}
+    \item \bluelink{https://richzhang.github.io/colorization/}{Colorisation}
+  \end{itemize}
 \end{frame}
