--- a/shared/latex/neural-networks/demo-rnn.tex
+++ b/shared/latex/neural-networks/demo-rnn.tex
@@ -4,5 +4,6 @@
     \item \bluelink{https://projector.tensorflow.org/}{Embeddings}
     \item \bluelink{https://karpathy.github.io/2015/05/21/rnn-effectiveness/}{Interprétation de réseaux récurrents}
     \item \bluelink{https://play.aidungeon.io/main/about}{AI Dungeon}
+    \item \bluelink{https://www.cleverbot.com/}{Clever Bot}
   \end{itemize}
 \end{frame}
