Small IAO fixes
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -4,8 +4,8 @@
     \item Fonction de perte (objectif) pas adaptée au besoin
     \item Fuite d'information dans le modèle
     \item Quasi non-interprétabilité du modèle
-    \item Non-adaptationn du modèle au changement
-    \item Le surapprentissage
+    \item Non-adaptation du modèle au changement
+    \item Sur-apprentissage
   \end{itemize}
 \end{frame}
 
