--- a/shared/latex/engineering/engineering-practices.tex
+++ b/shared/latex/engineering/engineering-practices.tex
@@ -134,9 +134,9 @@
     \item Travailler le pré-processing et la normalisation des différentes sources
     \item Versionner les données autant que le code
   \end{itemize}
+\end{frame}
 
-  \onslide<+->{Ajouter des caractéristiques sensées :}
-
+\begin{frame}{Étape 3~: Ajouter des caractéristiques sensées}
   \begin{itemize}[<+->]
     \item Beaucoup de caractéristiques simples > peu de caractéristiques complexes
     \item Des caractéristiques répandues plutôt que rares
@@ -144,8 +144,6 @@
     \item Communiquer avec les experts métiers
     \item Versionner les caractéristiques autant que le code
   \end{itemize}
-
-  \onslide<+->{Puis ré-entraîner les modèles (et baselines) et comparer les résultats.}
 \end{frame}
 
 \begin{frame}{Étape 4~: Améliorer les modèles}
