--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -41,15 +41,15 @@
 
 \begin{frame}
   \frametitle{Diagnostique}
-  Oncologie
   \begin{itemize}
+  \item oncologie
   \item cerveau (IRM par Qynapse)
   \item poumon (radiographie par Enlitic, Riverain Technologies ou Infervision)
   \item foie (scanner + IRM par Guerbet + Watson)
   \item sein (mamographies par Volpara Solution, QViewMedical ou Therapixel)
   \item peau (Meilleurs résultats de l'IA face à des spécialistes)
   \item biopsie (exploitation d'analyses de cellules par WebMicroscope)
-  \item     En particulier pour la prostate par KeeLab ou la vessie par VitaDX
+  \item En particulier pour la prostate par KeeLab ou la vessie par VitaDX
   \end{itemize}
 \end{frame}
 
@@ -71,7 +71,7 @@
     \begin{itemize}
     \item Énorme problème de dimensionalité
     \item Cycle de vie des gènes
-    \item analyse de corélation entre génome et phénotype
+    \item Analyse de corrélation entre génome et phénotype
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
