--- a/shared/latex/neural-networks/transformer.tex
+++ b/shared/latex/neural-networks/transformer.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Réseaux transformeurs}
+\fmg{\begin{frame}{Réseaux transformeurs}
   \imgtw[0.9]{transformer-fun}
-\end{frame}
+\end{frame}}
 
 \begin{frame}{Vue générale}
   \imgtw[0.9]{transformer-network-1}
