Some fixes for Natixis d4
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/neural-networks/rnn.tex
+++ b/shared/latex/neural-networks/rnn.tex
@@ -16,7 +16,7 @@
 \end{frame}
 
 \begin{frame}{Prédiction de la suite d'une séquence}
-  Exemmple~: modèle de langage
+  Exemple~: modèle de langage
 
   \imgtw[0.7]{rnn-language-model}
 
