--- a/shared/latex/supervised/regression-lineaire.tex
+++ b/shared/latex/supervised/regression-lineaire.tex
@@ -1,7 +1,4 @@
-\begin{frame}
-  \frametitle{Regression Linéaire}
-  \underline{Définition du problème :}\\
-  \newline
+\begin{frame}{Définition du problème}
   Soit $\{( x_i , y_i)\}_{i \in \mathbb{R}}$ un ensemble de données tel que $\forall i, x_i \in \mathbb{R}$ et $y_i \in \mathbb{R}$ \\
   \newline
   Trouver $\phi^*(x_i) = y_i^*$ telle que \\
@@ -11,6 +8,6 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Regression Linéaire}
+  \frametitle{Visualisation}
   \imgth[0.9]{regression-line-1}
 \end{frame}
