--- a/shared/latex/supervised/tp-reg-lin-poly.tex
+++ b/shared/latex/supervised/tp-reg-lin-poly.tex
@@ -1,14 +1,10 @@
-\subsection{Travaux Pratiques --- Apprentissage Surpervisé}
-
-\begin{frame}
-  \frametitle{Régression Linéaire}
+\begin{frame}{Instructions --- Régression linéaire}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq}{Regression Linéaire - TP}
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Régression Polynomiale}
+\begin{frame}{Instructions --- Régression polynomiale}
   \begin{center}
     \bluelink{https://colab.research.google.com/drive/1kNg2Bc4qBWt1q_SGSmw-zvLNG5FiQJYz}{Régression Polynomiale - Tutoriel}
   \end{center}
