--- a/shared/latex/sequential-data/tp-tf.tex
+++ b/shared/latex/sequential-data/tp-tf.tex
@@ -1,4 +1,4 @@
 \begin{frame}{Instructions}
   \centering
-  \bluelink{https://colab.research.google.com/gist/m09/b0c0f9e18f3772d5dcc0c000de469c68/time_series.ipynb}{Prévision de séries temporelles}
+  \bluelink{https://colab.research.google.com/drive/1hrjc4jQdpzaIYhwTD6zi7AMVccXkk4T1}{Prévision de séries temporelles}
 \end{frame}
