--- a/shared/latex/supervised/naive-bayes.tex
+++ b/shared/latex/supervised/naive-bayes.tex
@@ -1,27 +1,39 @@
-\begin{frame}
-  \frametitle{Naive Bayes}
-  Prenons un exemple : \\
-  Soit une base de donnée de fruits contenant uniquement des bananes ,oranges ,courgettes. \\
+\begin{frame}{Introduction}
+  \def\banane{\text{banane}}%
+  \def\orange{\text{orange}}%
+  \def\tomate{\text{tomate}}%
+  \def\jaune{\text{jaune}}%
+  \def\longg{\text{long}}%
+  \def\sucre{\text{sucré}}%
+  Prenons un exemple :
+
+  Soit une base de donnée de fruits contenant uniquement des bananes, oranges et courgettes. \\
   Chaque élément possède des caractéristiques couleur, taille, sucré. \\
   Appliquer Naive Bayes, c'est chercher le maximum de vraisemblance d'un élèments dont on ne connait pas la nature mais dont on connait les caractéristiques. \\
   On cherche donc quelle est la plus grande probabilité :
   \begin{itemize}
-  \item P(banane | jaune,long,sucré)
-  \item P(orange | jaune,long,sucré)
-  \item P(tomate | jaune,long,sucré)
+  \item $P(\banane \mid \jaune, \longg, \sucre)$
+  \item $P(\orange \mid \jaune, \longg, \sucre)$
+  \item $P(\tomate \mid \jaune, \longg, \sucre)$
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Naive Bayes}
+\begin{frame}{Calcul}
+  \def\banane{\text{banane}}%
+  \def\orange{\text{orange}}%
+  \def\tomate{\text{tomate}}%
+  \def\jaune{\text{jaune}}%
+  \def\longg{\text{long}}%
+  \def\sucre{\text{sucré}}%
   Naive = toutes les variables sont considérée indépendantes, donc : \\
   \begin{center}
-    $P(banane | jaune,long,sucre) =$\\
+    $P(\banane \mid \jaune, \longg, \sucre) =$\\
     $\;$\\
-    $ \frac{P(jaune|banane)*P(long|banane)*P(sucre|banane)*P(banane)}{P(jaune)*P(long)*P(sucre)}$
+    $ \frac{P(\jaune \mid \banane) \times P(\longg \mid \banane) \times P(\sucre \mid \banane) \times P(\banane)}%
+    {P(\jaune) \times P(\longg) \times P(\sucre)}$
   \end{center}
-  Pour estimer les différentes probabilités, on 'compte' dans notre base de donnée de fruits :\\
+  Pour estimer les différentes probabilités, on «~compte~» dans notre base de donnée de fruits :\\
   \begin{center}
-    $P(sucre|banane) = \frac{card(banane\;ET\;sucre)}{card(banane)}$
+    $P(\sucre \mid \banane) = \frac{\card{\banane \land \sucre}}{\card{\banane}}$
   \end{center}
 \end{frame}
