Rework about section, descriptions go to their own deck
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/bda/j1/about/description.tex
+++ b/orsys/bda/j1/about/description.tex
@@ -1,4 +1,3 @@
-
 \begin{frame}{Description}
   Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
 \end{frame}
@@ -17,7 +16,7 @@
   \item Comprendre les différents types de régressions
   \item Évaluer les performances d'un algorithme prédictif
   \item Sélectionner et classer des données dans de grands volumes de données
-  \item Se familiariser avec les librairies scientifiques python (NumPy, seaborn, sikit-learn, ... )
+  \item Se familiariser avec les librairies scientifiques python (NumPy, seaborn, scikit-learn, ... )
   \end{itemize}
   En bref, se familiariser avec les concepts et techniques de bases du \og{}Machine Learning\fg
 \end{frame}
@@ -25,7 +24,7 @@
 \begin{frame}{Programme}
   \begin{itemize}
   \item Introduction à la modélisation
-  \item Evaluation de modèles prédictifs
+  \item Évaluation de modèles prédictifs
   \item Les algorithmes supervisés/non-supervisés
   \item Projection de données par composantes
   \item Analyse de données textuelles
